Playlist file added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="covers/logo.jpg" type="image/icon type">
     <link rel="stylesheet" href="style.css">
     <title>Vector</title>
 </head>
@@ -11,7 +12,8 @@
     <nav>
         <ul>
             <li  class="brand"><img src="covers/logo.jpg" alt="Vector">Vector</li>
-            <li>Home</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="playlist.html">Playlist</a></li>
             <li>About</li>
         </ul>
     </nav>
